create admin manipulation endpoints
