# src/main/resources/api.yaml
@@ -93,6 +93,26 @@ paths:
               schema:
                 $ref: 'schemas.yaml#/components/schemas/UserBalanceResponseTo'
 
+  /user/{id}/make-admin:
+    post:
+      operationId: makeAdmin
+      tags: [ user ]
+      parameters:
+        - $ref: 'parameters.yaml#/components/parameters/idPathParam'
+      responses:
+        204:
+          description: OK
+
+  /user/{id}/revoke-admin:
+    post:
+      operationId: revokeAdmin
+      tags: [ user ]
+      parameters:
+        - $ref: 'parameters.yaml#/components/parameters/idPathParam'
+      responses:
+        204:
+          description: OK
+
   /bets:
     post:
       operationId: createBet
